--- a/extension/popup/todo.css
+++ b/extension/popup/todo.css
@@ -57,3 +57,26 @@ body {
     display: none;
 }
 
+.dropdown {
+    display: none;
+    float: right;
+    margin-right: 1px;
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 6px 8px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #999897}
