--- a/extension/popup/save-for-later/sfl.css
+++ b/extension/popup/save-for-later/sfl.css
@@ -16,8 +16,7 @@ body {
 }
 .website{
     background-color: white;
-    border-radius: 10px;
-    box-shadow: rgba(0,0,0,0.8) 0 0 5px;
+    box-shadow: rgba(0,0,0,0.8) 0 0 3px;
     font-size: 20px;
     font-family: 'ProductSansRegular';
     margin: 5px 0px;
@@ -25,14 +24,14 @@ body {
 }
 .input{
   width: 75%;
-  padding: 12px 20px;
-  margin: 8px 0;
+  padding: 10px 18px;
+  margin: 4px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  font-family: Tahoma, Geneva, sans-serif;
-  font-size: 20px;
+  font-family: Rubik,Arial,sans-serif;
+  font-size: 18px;
 }
 
 .edit-site {
@@ -65,6 +64,7 @@ body {
     display: none;
     float: right;
     margin-right: 1px;
+    margin-bottom: 9px;
     position: relative;
 }
 
@@ -111,4 +111,57 @@ body {
 
 .note {
     margin: 6px 0px;
+}
+
+.link {
+    display: block;
+    height: 100%;
+    width: 100%;
+    z-index: 5;
+}
+
+#queue {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#options {
+    float: right;
+    position: relative;
+    bottom: 15px;
+    z-index: 5;
+}
+
+.website #options {
+    display: none;
+}
+
+.website:hover #options {
+    display: block;
+}
+
+.link {
+    color: none;
+    text-decoration: none;
+}
+
+.siteinfo {
+    font-family: proxima-nova, "Helvetica Neue", Helvetica, Arial;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.title {
+    color: #50bcb6;
+}
+
+.domain {
+    color: rgb(153, 153, 153);
+    font-size: 15px;
+}
+
+.note {
+    color: black;
+    font-family: 'ProductSansRegular';
 }
